@@ -19,7 +19,7 @@ use File::Basename 'dirname', 'basename';
 
 use SPVM::Build;
 use SPVM::Build::Util;
-use SPVM::Build::SPVMInfo;
+use SPVM::Build::Info;
 
 sub new {
   my $self = shift->SUPER::new(@_);
@@ -34,7 +34,7 @@ sub get_subs {
   
   my $compiler = $self->{compiler};
   
-  my $subs = SPVM::Build::SPVMInfo::get_subs($compiler, $package_name);
+  my $subs = SPVM::Build::Info::get_subs($compiler, $package_name);
   $subs = [grep { $_->{have_native_desc} } @$subs];
   
   return $subs;
@@ -67,7 +67,7 @@ sub create_shared_lib_dist {
 sub create_shared_lib_runtime {
   my ($self, $package_name) = @_;
   
-  my $package_load_path = SPVM::Build::SPVMInfo::get_package_load_path($self->{compiler}, $package_name);
+  my $package_load_path = SPVM::Build::Info::get_package_load_path($self->{compiler}, $package_name);
   my $input_dir = SPVM::Build::Util::remove_package_part_from_path($package_load_path, $package_name);
 
   # Build directory
